--- a/Style/style.css
+++ b/Style/style.css
@@ -107,10 +107,40 @@ header ul li a{
     display: inline-block;
     margin: 0 20px;
     cursor: pointer;
+    transition:0.5s ;
 }
 .thumb li:hover{
     transform: translateY(-15px);
 }
 .thumb li img{
     max-width: 60px;
+}
+.sci{
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.sci li{
+    list-style: none;
+}
+
+.sci li a{
+    display: inline-block;
+    margin: 5px 0;
+    transform: scale(0.6);
+    filter: invert(1);
+}
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #017143;
+    clip-path: circle(600px  at right 800px);
 }
